Fixed navbar alignment

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ a:hover {
     display: flex;
     padding: 5px;
     justify-content: space-between;
+    align-items: center;
     margin: 15px;
 }
 
